fix: refactor align-items-center into classes

--- a/src/assets/style/_utils.scss
+++ b/src/assets/style/_utils.scss
@@ -85,3 +85,7 @@
 .flex--content-center {
   justify-content: center;
 }
+
+.flex--align-items-center {
+  align-items: center;
+}
